[package]
name = "dota_tools"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
eframe = "0.26"
egui_extras = { version = "0.26", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
regex = "1.10"
reqwest = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
